Изменения для PR

--- a/static/auth_mail.html
+++ b/static/auth_mail.html
@@ -37,7 +37,7 @@
         </div>
         <div class="bottom">
             <h5>
-                войти с помощью
+                Войти с помощью
             </h5>
             <div class="icon-container">
                 <div class="icon">
