--- a/static/auth_mail.html
+++ b/static/auth_mail.html
@@ -33,7 +33,7 @@
         </div>
         <div class="buttons">
             <button class="btn">Войти</button>
-            <button class="btn">Зарегистрироваться</button>
+            <a href="registration.html" class="btn">Зарегистрироваться</a>
         </div>
         <div class="bottom">
             <h5>
