--- a/static/auth_mail.html
+++ b/static/auth_mail.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <title>Вход</title>
 </head>
 <body>
     <div class="form">
