--- a/static/inbox.html
+++ b/static/inbox.html
@@ -9,8 +9,8 @@
     <link href="inbox.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
-    <div class="main-bg" style="width:100vw;height:100vh;background: url('images/фон .jpg') no-repeat center center;background-size:cover;display:flex;align-items:flex-start;justify-content:flex-start;">
+    
+    <div class="fone" style="width:100vw;height:100vh;background: url('images/фон .jpg') no-repeat center center;background-size:cover;display:flex;align-items:flex-start;justify-content:flex-start;">
         <div class="main-wrapper" style="width:90vw;height:90vh;display:flex;flex-direction:column;margin-left:2vw;">
             <div class="header" style="display:flex;align-items:center;justify-content:space-between;padding:18px 30px 0 0;">
                 <div class="logo" style="font-family:'Nunito Sans',sans-serif;font-size:2.2vw;color:#fff;display:flex;align-items:center;gap:10px;"><span>A4 почта</span></div>
