--- a/static/registration.html
+++ b/static/registration.html
@@ -10,7 +10,11 @@
     <div class="form">
         <div class="lable">
             <h1>
-                Регистрация<br>в А4 почту
+                Регистрация<br>в
+                <span class="logo">
+                    <img src="images/blue_logo.svg" alt="blue_logo">
+                </span>
+                почту
             </h1>
         </div>
         <div class="regform">
