--- a/static/auth_phone.html
+++ b/static/auth_phone.html
@@ -10,7 +10,13 @@
     <div class="form">
         <div class="lable">
             <h1>
-                Вход в А4 почту
+                Вход в
+            </h1>
+            <div class="logo">
+                <img src="images/blue_logo.svg" alt="blue_logo">
+            </div>
+            <h1>
+                почту
             </h1>
         </div>
         <div class="bigslider">
