Дополнена главная страница

--- a/static/mail_list.html
+++ b/static/mail_list.html
@@ -15,13 +15,13 @@
             </div>
                 <div class="actions">
                     <div class="icon">
-                        <img src="images/vk.jpeg" alt="vk">
+                        <img src="images/sett.png" alt="settings">
                     </div>
                     <div class="icon">
-                        <img src="images/tg.jpeg" alt="tg">
+                        <img src="images/logout.png" alt="logout">
                     </div>
                     <div class="icon">
-                        <img src="images/apid.jpeg" alt="apple id">
+                        <img src="images/avatar.png" alt="avatar">
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                     <button class="topbut-btn">+ Создать</button>
                     <button class="topbut-btn">Отметить</button>
                 </div>
-                <button class="new-mail-btn">- Здравствуйте! Для вас скид...</button>
+                <h1>Входящие</h1>
                 <button class="new-mail-btn">- Здравствуйте! Для вас скид..</button>
                 <button class="new-mail-btn">- Здравствуйте! Для вас скид...</button>
                 <button class="new-mail-btn">- Здравствуйте! Для вас скид...</button>
@@ -71,6 +71,18 @@
                 <div class="content">
                 </div>
                 <div class="under_letter">
+                    <div class="icon">
+                        <img src="images/add.png" alt="add">
+                    </div>
+                    <div class="icon">
+                        <img src="images/drafr.png" alt="draft">
+                    </div>
+                    <div class="icon">
+                        <img src="images/delete.png" alt="delete">
+                    </div>
+                    <div class="icon">
+                        <img src="images/note.png" alt="note">
+                    </div>
                     <div>
                         <button class="send-btn">Отправить</button>
                     </div>
