Добавки на главную страницу

--- a/static/mail_list.html
+++ b/static/mail_list.html
@@ -11,6 +11,9 @@
     <div class="navbar">
             <div class="logo" >A4 почта</div>
             <div class="search-box">
+                <div class="icon_side">
+                    <img src="images/search.png" alt="search">
+                </div>
                 <input type="text" placeholder="Поиск" class="search">
             </div>
                 <div class="actions">
@@ -29,13 +32,48 @@
 
     <div class="content-row">
         <div class="sidebar">
-            <button class="folder-btn">Избранные</button>
-            <button class="folder-btn">Входящие &gt;</button>
-            <button class="folder-btn">Отправленные</button>
-            <button class="folder-btn">Черновики</button>
-            <button class="folder-btn">Удаленные</button>
-            <button class="folder-btn">Заметки</button>
-            <button class="folder-btn">Спам</button>
+            <button class="folder-btn">
+                <div class="icon_side">
+                    <img src="images/favorite.png" alt="favorite">
+                </div>
+                Избранные
+            </button>
+            <button class="folder-btn">
+                <div class="icon_side">
+                    <img src="images/input.png" alt="input">
+                </div>
+                Входящие &gt;
+            </button>
+            <button class="folder-btn">
+                <div class="icon_side">
+                    <img src="images/output.png" alt="output">
+                </div>
+                Отправленные
+            </button>
+            <button class="folder-btn">
+                <div class="icon_side">
+                    <img src="images/draft_light.png" alt="draft">
+                </div>
+                Черновики
+            </button>
+            <button class="folder-btn">
+                <div class="icon_side">
+                    <img src="images/delete_light.png" alt="delete">
+                </div>
+                Удаленные
+            </button>
+            <button class="folder-btn">
+                <div class="icon_side">
+                    <img src="images/note_light.png" alt="note">
+                </div>
+                Заметки
+            </button>
+            <button class="folder-btn">
+                <div class="icon_side">
+                    <img src="images/spam.png" alt="spam">
+                </div>
+                Спам
+            </button>
         </div>
         <div class="maincontent">
             <div class="sidebar_mail">
