--- a/static/auth_mail.html
+++ b/static/auth_mail.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="btn">Войти</button>
+            <a href="mail_list.html" class="btn">Войти</a>
             <a href="registration.html" class="btn">Зарегистрироваться</a>
         </div>
         <div class="bottom">
