--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     
     <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.8/dist/handlebars.min.js"></script>
     <script type="module" src="/js/Main.js"></script>
+    <script type="module" src="./dist/bundle.js"></script>
 </body>
 </html>
