--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A4 Mail</title>
-    <link rel="stylesheet" href="./styles/global.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <title>mail</title>
 </head>
 <body>
-    <div id="root">
-        <div style="padding: 20px; text-align: center;">
-            <h2>Loading A4 Mail...</h2>
-            <p>Please wait while the application is loading</p>
-        </div>
-    </div>
-    
-    <script type="module" src="../index.js"></script>
+    <div id="app">Загрузка приложения...</div>
+    <script src="bundle.js"></script>
 </body>
 </html>
