--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
-    <title>flintmail</title>
+    <title>FlintMail</title>
 </head>
 <body>
-    <div id="app">Загрузка приложения...</div>
-    <script src="bundle.js"></script>
+    <div id="app"></div>
 </body>
 </html>
