--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
-    <script>window.__API_BASE_URL__ = "https://flintmail.ru/api";</script>
+    <script>window.__API_BASE_URL__ = "http://localhost:5000";</script>
     <title>FlintMail</title>
     <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
 </head>
