--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,6 @@
 </head>
 <body>
     <div id="app"></div>
+    <iframe src="https://adnet.website/api/slots/serving/f11ab58c-7093-49b8-ba8d-65c6e46e184a" width="240" height="400" frameborder="0" scrolling="no" style="border:none; overflow:hidden;"></iframe>
 </body>
 </html>
