--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <script>
         window.__API_BASE_URL__ = "https://flintmail.ru/api";
         window.__AD_SLOT__ = '<iframe src="https://adnet.website/api/slots/serving/a223ce3b-d7ba-4154-bc83-e18af2cffe42" width="240" height="400" frameborder="0" scrolling="no" style="border:none; overflow:hidden;"></iframe>';
+        document.documentElement.setAttribute("data-ad-slot", window.__AD_SLOT__ || "");
     </script>
     <title>FlintMail</title>
     <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
