--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
     <script>
-        window.__API_BASE_URL__ = "https://flintmail.ru/api";
+        window.__API_BASE_URL__ = "http://localhost:8000";
         window.__AD_SLOT__ = '<iframe src="https://adnet.website/api/slots/serving/efad7c61-fd31-492f-a735-5932cd1a563d" width="240" height="400" frameborder="0" scrolling="no" style="border:none; overflow:hidden;"></iframe>';
         document.documentElement.setAttribute("data-ad-slot", window.__AD_SLOT__ || "");
         document.addEventListener("DOMContentLoaded", () => {
